--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,36 @@ body {
   height: 100%;
   z-index: -1;
 }
+
+#showcase .showcase-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 100%;
+}
+
+#showcase h1 {
+  font-size: 4rem;
+}
+
+#showcase p {
+  font-size: 1.3rem
+}
+
+.btn {
+  display: inline-block;
+  border: none;
+  background: var(--primary-color);
+  border: none;
+  text-decoration: none;
+  color: #fff;
+  padding: 0.75rem 1.5rem;
+  margin-top: 1rem;
+  transition: opacity 1s ease-in-out;
+}
+
+.btn:hover {
+  opacity: 0.7;
+}
